--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -53,11 +53,7 @@ jobs:
 
       # Deploy to web app
       - name: Deploy to Azure WebApp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: app-cloudlumberjack-dev
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: './published-app'
+        run: echo "Artifact has been downloaded and is ready for deployment."
 
   deploy-prod:
     runs-on: 'ubuntu-latest'
@@ -74,8 +70,4 @@ jobs:
 
       # Deploy to web app
       - name: Deploy to Azure WebApp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: app-cloudlumberjack-prod
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: './published-app'
+        run: echo "Artifact has been downloaded and is ready for deployment."
