--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -40,8 +40,31 @@ jobs:
 
   deploy-dev:
     runs-on: 'ubuntu-latest'
+    concurrency: 
+      group: stage-deploy
+      cancel-in-progress: true
     environment: 'dev'
     needs: build-and-publish
+    steps:
+
+      # Download published artifact
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: published-app
+          path: './published-app'
+
+      # Deploy to web app
+      - name: Deploy to Azure WebApp
+        run: echo "Artifact has been downloaded and is ready for deployment."
+
+  deploy-stage:
+    runs-on: 'ubuntu-latest'
+    concurrency: 
+      group: stage-deploy
+      cancel-in-progress: true
+    environment: 'stage'
+    needs: [build-and-publish]
     steps:
 
       # Download published artifact
@@ -59,26 +82,6 @@ jobs:
     runs-on: 'ubuntu-latest'
     concurrency: 
       group: prod-deploy
-      cancel-in-progress: true
-    environment: 'prod'
-    needs: [build-and-publish]
-    steps:
-
-      # Download published artifact
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: published-app
-          path: './published-app'
-
-      # Deploy to web app
-      - name: Deploy to Azure WebApp
-        run: echo "Artifact has been downloaded and is ready for deployment."
-
-  deploy-prod2:
-    runs-on: 'ubuntu-latest'
-    concurrency: 
-      group: prod-deploy2
       cancel-in-progress: true
     environment: 'prod'
     needs: [build-and-publish]
