--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -38,12 +38,12 @@ jobs:
           name: published-app
           path: './app/published-app'
 
-  deploy-dev:
+  deploy-admin:
     runs-on: 'ubuntu-latest'
     concurrency: 
-      group: stage-deploy
+      group: admin-deploy
       cancel-in-progress: true
-    environment: 'dev'
+    environment: 'admin'
     needs: build-and-publish
     steps:
 
@@ -58,12 +58,12 @@ jobs:
       - name: Deploy to Azure WebApp
         run: echo "Artifact has been downloaded and is ready for deployment."
 
-  deploy-stage:
+  deploy-frontend:
     runs-on: 'ubuntu-latest'
     concurrency: 
-      group: stage-deploy
+      group: frontend-deploy
       cancel-in-progress: true
-    environment: 'stage'
+    environment: 'frontend'
     needs: [build-and-publish]
     steps:
 
@@ -78,32 +78,12 @@ jobs:
       - name: Deploy to Azure WebApp
         run: echo "Artifact has been downloaded and is ready for deployment."
 
-  deploy-prod:
+  deploy-backend:
     runs-on: 'ubuntu-latest'
     concurrency: 
-      group: prod-deploy
+      group: backend-deploy
       cancel-in-progress: true
-    environment: 'prod'
-    needs: [build-and-publish]
-    steps:
-
-      # Download published artifact
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: published-app
-          path: './published-app'
-
-      # Deploy to web app
-      - name: Deploy to Azure WebApp
-        run: echo "Artifact has been downloaded and is ready for deployment."
-
-  deploy-prod2:
-    runs-on: 'ubuntu-latest'
-    concurrency: 
-      group: prod-deploy2
-      cancel-in-progress: true
-    environment: 'prod'
+    environment: 'backend'
     needs: [build-and-publish]
     steps:
 
